...
        <scene sceneID="iFo-QT-oHV">
            <objects>
                <viewController id="7Wg-hL-pfE" customClass="SettingsViewController" customModule="Hang" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="YMJ-oE-ggh">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
...
                                                <state key="normal" title="Hangboarding: More Info ℹ︎"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="infoBtn"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
                                                <state key="normal" title="Send Feature Request / Bug Report 🐞"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="emailBtn"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
                        <viewLayoutGuide key="safeArea" id="2Bi-Xu-aI8"/>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="r7G-oI-dI8"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YmX-dM-Kb9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="sessionNameTxtBox"/>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
...
                                                        <state key="normal" image="plus" catalog="system"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addIntervalBtn"/>
                                                        </userDefinedRuntimeAttributes>
                                                        <connections>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Session" id="oYR-S8-Ib3">
                        <rightBarButtonItems>
                            <barButtonItem title="Done" id="HBp-Xg-tw8">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="doneBtn"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Edit" image="rectangle.compress.vertical" catalog="system" id="cgk-CP-BsB">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="reorderBtn"/>
...
                                        <rect key="frame" x="18" y="6" width="339" height="32"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sO-Ad-uUt">
                                                <rect key="frame" x="0.0" y="0.0" width="245" height="32"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                        <barButtonItem key="leftBarButtonItem" title="Item" image="gear" catalog="system" id="q3W-2D-v6Z">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="settingsBtn"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ncT-Nm-NgB">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="newSessionBtn"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                            <barButtonItem title="Start" id="Hiq-ge-X9l">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="timerControlBtn"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                            <barButtonItem title="Item" image="square.and.arrow.up.on.square" catalog="system" id="lZP-KY-UDz">
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="shareBtn"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
