...
        return UISwipeActionsConfiguration(actions: [editAction])
    }
    
    // Tralining Swipe Actions
    func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        // Delete Btn
        let deleteAtion = UIContextualAction(style: .destructive, title: "Delete", handler: { (action: UIContextualAction, view: UIView, success :(Bool) -> Void) in
            do {
                // Remove session
                try Sessions.instance.remove(atIndex: indexPath.row)
                // Remove Session from tableview
                self.sessionTableView.deleteRows(at: [indexPath], with: .automatic)
            } catch {
...
